So many spacing fixes

--- a/css/browser.css
+++ b/css/browser.css
@@ -271,7 +271,7 @@ tr.shown td.details-control {
     font-size: 10pt;
     line-height: 20px;
     color: white;
-    width: 246px;
+    width: 245px;
     border-collapse: collapse;
 }
 
